# foxglove_websocket_cpp

./: CMakeLists.txt  README.md  compile_proto.sh
foxglove_pb/: ArrowPrimitive.pb.cc  CMakeLists.txt  CameraCalibration.pb.cc  CompressedImage.pb.cc  CompressedVideo.pb.cc  CubePrimitive.pb.cc  CylinderPrimitive.pb.cc  FrameTransform.pb.cc  FrameTransforms.pb.cc  ImageAnnotations.pb.cc  KeyValuePair.pb.cc  LinePrimitive.pb.cc  LocationFix.pb.cc  ModelPrimitive.pb.cc  PointsAnnotation.pb.cc  RawImage.pb.cc  SceneEntity.pb.cc  SceneEntityDeletion.pb.cc  SceneUpdate.pb.cc  SpherePrimitive.pb.cc  TextAnnotation.pb.cc  TextPrimitive.pb.cc  TriangleListPrimitive.pb.cc
include/foxglove/: ArrowPrimitive.pb.h  CameraCalibration.pb.h  CompressedImage.pb.h  CompressedVideo.pb.h  CubePrimitive.pb.h  CylinderPrimitive.pb.h  FrameTransform.pb.h  FrameTransforms.pb.h  ImageAnnotations.pb.h  KeyValuePair.pb.h  LinePrimitive.pb.h  LocationFix.pb.h  ModelPrimitive.pb.h  PointsAnnotation.pb.h  RawImage.pb.h  SceneEntity.pb.h  SceneEntityDeletion.pb.h  SceneUpdate.pb.h  SpherePrimitive.pb.h  TextAnnotation.pb.h  TextPrimitive.pb.h  TriangleListPrimitive.pb.h
include/robot/: camera.hpp  robot_armor.hpp
include/sim/: armor_pnp_solver.hpp  armor_tracking_utils.hpp  extended_kalman_filter.hpp
src/: armor_pnp_solver.cpp  extended_kalman_filter.cpp  rm_robot_sim.cpp  server_protobuf.cpp
